# lallpaper

./: package.json
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/api/: user.rs
backend/src/auth/: jwt.rs
backend/src/utils/: jwt.rs
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/components/: Account.svelte
frontend/src/routes/feed/: +page.svelte  postTest.svelte
frontend/src/routes/feed/components/: PostTest.svelte
