[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "tls-native-tls",
] }
axum = "0.8.1"
dotenv = "0.15.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
chrono = "0.4.40"
time = "0.3.41"
axum-extra = {version = "0.10.1", features=["cookie"]}
